# Auto-Differentiation

./: .gitignore  AutoDiff.py  LICENSE  MLP.py  README.md  main.py  pyproject.toml  random function  test.py  visualize.py
.github/workflows/: ci.yml
autodiff/: __init__.py  ad.py  api.py  array.py  linalg.py  ops.py  tensor.py  types.py  utils.py
legacy/: AutoDiff.py  README.md  test.py  visualize.py
tests/: test_ad.py  test_arrays.py  test_compare_jax.py  test_linalg.py  test_ops.py  test_smoke.py  test_tensors.py  test_utils.py  utils.py
